Fixed up some grade calculation errors and other tweaks.